# DLGeoGuesser

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt  trial.py
configs/: clip_landscape.yaml  clip_vibe.yaml  dino_geoguesser.yaml  vistas_yolo.yaml
data/: data_urls.txt
models/: README.md
models/d12_base_1k/base_checkpoints/: meta_001000.json  model_001000.pt  report_core_20251206_211838.md
models/d12_base_1k/tokenizer/: token_bytes.pt  (+1 more)
models/llama_finetune_1494/: rng_state.pth
scripts/: chat.py  download_and_organise.sh  fix_svg_extensions.py  geohints_urls.txt  make_geohints_split.py  predict_and_visualise.py  prepare_vistas_yolo.py  process_geohints.py  scrape_geohints.py  test_vla_client.py  visualise_data.py
scripts/analysis/: plot_training_performance.py
scripts/clip_landscape/: README.md  run_clip_embeddings.py  run_clip_knn_eval.py  run_clip_training.py
scripts/clip_vibe/: README.md  predict_and_visualise.py  predict_from_images.py  regenerate_metadata.py  scrape_ddg.py
scripts/dino/: predict_from_images.py
scripts/geohints_dataset/: README.md  fix_svg_extensions.py  make_geohints_split.py  process_geohints.py  scrape_geohints.py
scripts/pipeline/: run_stage1.py  run_with_vla.py  visualize_results.py
scripts/vistas_dataset/: README.md  visualise_data.py
scripts/yolo/: README.md  download_and_organise_vistas.sh  predict_and_visualise.py  prepare_vistas_yolo.py
src/: README.md
ui/: README.md  app.py  run_game_show.sh  test_debug.html
ui/static/: script.js  style.css
ui/templates/: index.html
(+39 files in other folders)
