[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dl_geoguesser"
version = "0.0.1"
description = "GeoGuessr AI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
